# Projet_10

./: README.md  db.sqlite3  manage.py  pyproject.toml
Projet_10/: asgi.py  settings.py  urls.py  wsgi.py
comments/: models.py  permissions.py  serializers.py  views.py
contributors/: models.py  permissions.py  serializers.py  views.py
issues/: models.py  permissions.py  serializers.py  views.py
projects/: models.py  permissions.py  serializers.py  views.py
users/: models.py  serializers.py  utils.py  views.py
